--- a/index2.html
+++ b/index2.html
@@ -31,9 +31,24 @@
                 <article role="tabpanel" id="tab-A">
                   <div class="inner_cont">
                     <div class="options" id="font_opts">
-                      <div class="opts"></div>
-                      <div class="opts"></div>
-                      <div class="opts"></div>
+                      <div class="opts">
+                        <div class="field-row input_field">
+                          <label class="opts_txt" for="text21">Font:</label>
+                          <input id="text21" type="text" />
+                        </div>
+                      </div>
+                      <div class="opts">
+                        <div class="field-row input_field">
+                          <label class="opts_txt" for="text21">Font Style:</label>
+                          <input id="text21" type="text" />
+                        </div>
+                      </div>
+                      <div class="opts">
+                        <div class="field-row input_field">
+                          <label class="opts_txt" for="text21">Size:</label>
+                          <input id="text21" type="text" />
+                        </div>
+                      </div>
                     </div>
                     <div class="options" id="txt_decor">
                       <div class="txt_decor_opt1">
@@ -92,6 +107,10 @@
                     </div>
                   </div>
                 </article>
+                <div class="footer_btn">
+                  <button>Ok</button>
+                  <button>Cancel</button>
+                </div>
               </section>
         </div>
     </div>
