--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="wrapper_right">
                 <div class="upr_lft_btn">
-                    <button id="new_btn" class="left_btn"><u>N</u>ew...</button>
+                    <button autofocus id="new_btn" class="left_btn"><u>N</u>ew...</button>
                     <button class="left_btn" disabled><u class="blurIt">E</u>dit...</button>
                     <button class="left_btn" disabled><u class="blurIt">R</u>emove</button>
                     <button class="left_btn" disabled>Cop<u class="blurIt">y</u></button>
@@ -41,13 +41,6 @@
         </div>
       </div>
     </div>
-    <button id="test">testing</button>
-    </script>
-    <script>
-      window.onload = function(){
-        document.getElementById('test').click();
-      }
-    </script>
   </body>
 
 </html>
