--- a/index.html
+++ b/index.html
@@ -22,20 +22,24 @@
         <div class="field-row-stacked" >
             <div class="wrapper_left">
                 <div class="heading_txt_area">C<u>u</u>stom shows:</div>
-                <div class="field-row">
+                <div class="field-row" style="height: 74%;">
                   <input id="text21" type="text" >
                 </div>
-                <div class="close_btn_txt_area"><button><u>C</u>lose</button></div>
+                <div class="close_btn_txt_area"><button><span class="underLnBtn">C</span>lose</button></div>
             </div>
             <div class="wrapper_right">
                 <div class="upr_lft_btn">
-                    <button autofocus id="new_btn" class="left_btn"><u>N</u>ew...</button>
-                    <button class="left_btn" disabled><u class="blurIt">E</u>dit...</button>
-                    <button class="left_btn" disabled><u class="blurIt">R</u>emove</button>
-                    <button class="left_btn" disabled>Cop<u class="blurIt">y</u></button>
+                  <span>
+                    <button autofocus id="new_btn" class="left_btn"><span class="underLnBtn">N</span>ew...</button>
+                  </span>
+                  <span>
+                    <button class="left_btn" disabled><span class="underLnBtn">E</span>dit...</button>
+                  </span>
+                    <button class="left_btn" disabled><span class="underLnBtn">R</span>emove</button>
+                    <button class="left_btn" disabled>Cop<span class="underLnBtn">y</span></button>
                 </div>
                 <div class="lwr_lft_btn">
-                    <button class="left_btn" disabled><u class="blurIt">S</u>how</button>
+                    <button class="left_btn" disabled><span class="underLnBtn">S</span>how</button>
                 </div>
             </div>
         </div>
